JDK21 and VirtualThreads
Signed-off-by: melloware <mellowaredev@gmail.com>