@@ -38,7 +38,6 @@ import javax.jmdns.ServiceInfo;
 import javax.jmdns.ServiceListener;
 import javax.jmdns.ServiceTypeListener;
 import javax.jmdns.impl.constants.DNSConstants;
-import javax.jmdns.impl.util.NamedThreadFactory;
 
 /**
  * This class enable multihoming mDNS. It will open a mDNS per IP address of the machine.
@@ -46,7 +45,7 @@ import javax.jmdns.impl.util.NamedThreadFactory;
  * @author C&eacute;drik Lime, Pierre Frisch
  */
 public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoImpl.Delegate {
-    private static Logger                                      logger = LoggerFactory.getLogger(JmmDNSImpl.class);
+    private static final Logger                                      logger = LoggerFactory.getLogger(JmmDNSImpl.class);
 
     private final Set<NetworkTopologyListener>                 _networkListeners;
 
@@ -90,15 +89,15 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     public JmmDNSImpl() {
         super();
-        _networkListeners = Collections.synchronizedSet(new HashSet<NetworkTopologyListener>());
-        _knownMDNS = new ConcurrentHashMap<InetAddress, JmDNS>();
-        _services = new ConcurrentHashMap<String, ServiceInfo>(20);
-        _listenerExecutor = Executors.newSingleThreadExecutor(new NamedThreadFactory("JmmDNS Listeners"));
-        _jmDNSExecutor = Executors.newCachedThreadPool(new NamedThreadFactory("JmmDNS"));
+        _networkListeners = Collections.synchronizedSet(new HashSet<>());
+        _knownMDNS = new ConcurrentHashMap<>();
+        _services = new ConcurrentHashMap<>(20);
+        _listenerExecutor = Executors.newVirtualThreadPerTaskExecutor();
+        _jmDNSExecutor = Executors.newVirtualThreadPerTaskExecutor();
         _timer = new Timer("Multihomed mDNS.Timer", true);
-        _serviceListeners = new ConcurrentHashMap<String, List<ServiceListener>>();
-        _typeListeners = Collections.synchronizedSet(new HashSet<ServiceTypeListener>());
-        _serviceTypes = Collections.synchronizedSet(new HashSet<String>());
+        _serviceListeners = new ConcurrentHashMap<>();
+        _typeListeners = Collections.synchronizedSet(new HashSet<>());
+        _serviceTypes = Collections.synchronizedSet(new HashSet<>());
         (new NetworkChecker(this, NetworkTopologyDiscovery.Factory.getInstance())).start(_timer);
         _isClosing = new AtomicBoolean(false);
         _closed = new AtomicBoolean(false);
@@ -116,7 +115,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
             _listenerExecutor.shutdown();
             _jmDNSExecutor.shutdown();
             // We need to cancel all the DNS
-            ExecutorService executor = Executors.newCachedThreadPool(new NamedThreadFactory("JmmDNS.close"));
+            ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
             try {
                 for (final JmDNS mDNS : this.getDNS()) {
                     executor.submit(new Runnable() {
@@ -157,11 +156,11 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     @Override
     public String[] getNames() {
-        Set<String> result = new HashSet<String>();
+        Set<String> result = new HashSet<>();
         for (JmDNS mDNS : this.getDNS()) {
             result.add(mDNS.getName());
         }
-        return result.toArray(new String[result.size()]);
+        return result.toArray(new String[0]);
     }
 
     /*
@@ -170,11 +169,11 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     @Override
     public String[] getHostNames() {
-        Set<String> result = new HashSet<String>();
+        Set<String> result = new HashSet<>();
         for (JmDNS mDNS : this.getDNS()) {
             result.add(mDNS.getHostName());
         }
-        return result.toArray(new String[result.size()]);
+        return result.toArray(new String[0]);
     }
 
     /*
@@ -183,11 +182,11 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     @Override
     public InetAddress[] getInetAddresses() throws IOException {
-        Set<InetAddress> result = new HashSet<InetAddress>();
+        Set<InetAddress> result = new HashSet<>();
         for (JmDNS mDNS : this.getDNS()) {
             result.add(mDNS.getInetAddress());
         }
-        return result.toArray(new InetAddress[result.size()]);
+        return result.toArray(new InetAddress[0]);
     }
 
     /*
@@ -197,7 +196,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
     @Override
     public JmDNS[] getDNS() {
         synchronized (_knownMDNS) {
-            return _knownMDNS.values().toArray(new JmDNS[_knownMDNS.size()]);
+            return _knownMDNS.values().toArray(new JmDNS[0]);
         }
     }
 
@@ -208,11 +207,11 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
     @Override
     @Deprecated
     public InetAddress[] getInterfaces() throws IOException {
-        Set<InetAddress> result = new HashSet<InetAddress>();
+        Set<InetAddress> result = new HashSet<>();
         for (JmDNS mDNS : this.getDNS()) {
             result.add(mDNS.getInterface());
         }
-        return result.toArray(new InetAddress[result.size()]);
+        return result.toArray(new InetAddress[0]);
     }
 
     /*
@@ -250,21 +249,14 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
     public ServiceInfo[] getServiceInfos(final String type, final String name, final boolean persistent, final long timeout) {
         // We need to run this in parallel to respect the timeout.
         final JmDNS[] dnsArray = this.getDNS();
-        final Set<ServiceInfo> result = new HashSet<ServiceInfo>(dnsArray.length);
+        final Set<ServiceInfo> result = new HashSet<>(dnsArray.length);
         if (dnsArray.length > 0) {
-            List<Callable<ServiceInfo>> tasks = new ArrayList<Callable<ServiceInfo>>(dnsArray.length);
+            List<Callable<ServiceInfo>> tasks = new ArrayList<>(dnsArray.length);
             for (final JmDNS mDNS : dnsArray) {
-                tasks.add(new Callable<ServiceInfo>() {
-
-                    @Override
-                    public ServiceInfo call() throws Exception {
-                        return mDNS.getServiceInfo(type, name, persistent, timeout);
-                    }
-
-                });
+                tasks.add(() -> mDNS.getServiceInfo(type, name, persistent, timeout));
             }
 
-            ExecutorService executor = Executors.newFixedThreadPool(tasks.size(), new NamedThreadFactory("JmmDNS.getServiceInfos"));
+            ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
             try {
                 List<Future<ServiceInfo>> results = Collections.emptyList();
                 try {
@@ -295,7 +287,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
                 executor.shutdown();
             }
         }
-        return result.toArray(new ServiceInfo[result.size()]);
+        return result.toArray(new ServiceInfo[0]);
     }
 
     /*
@@ -378,7 +370,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
         final String loType = type.toLowerCase();
         List<ServiceListener> list = _serviceListeners.get(loType);
         if (list == null) {
-            _serviceListeners.putIfAbsent(loType, new LinkedList<ServiceListener>());
+            _serviceListeners.putIfAbsent(loType, new LinkedList<>());
             list = _serviceListeners.get(loType);
         }
         if (list != null) {
@@ -514,19 +506,14 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
     public ServiceInfo[] list(final String type, final long timeout) {
         final JmDNS[] dnsArray = this.getDNS();
         // We need to run this in parallel to respect the timeout.
-        final Set<ServiceInfo> result = new HashSet<ServiceInfo>(dnsArray.length * 5);
+        final Set<ServiceInfo> result = new HashSet<>(dnsArray.length * 5);
         if (dnsArray.length > 0) {
-            List<Callable<List<ServiceInfo>>> tasks = new ArrayList<Callable<List<ServiceInfo>>>(dnsArray.length);
+            List<Callable<List<ServiceInfo>>> tasks = new ArrayList<>(dnsArray.length);
             for (final JmDNS mDNS : dnsArray) {
-                tasks.add(new Callable<List<ServiceInfo>>() {
-                    @Override
-                    public List<ServiceInfo> call() throws Exception {
-                        return Arrays.asList(mDNS.list(type, timeout));
-                    }
-                });
+                tasks.add(() -> Arrays.asList(mDNS.list(type, timeout)));
             }
 
-            ExecutorService executor = Executors.newFixedThreadPool(tasks.size(), new NamedThreadFactory("JmmDNS.list"));
+            ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
             try {
                 List<Future<List<ServiceInfo>>> results = Collections.emptyList();
                 try {
@@ -554,7 +541,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
                 executor.shutdown();
             }
         }
-        return result.toArray(new ServiceInfo[result.size()]);
+        return result.toArray(new ServiceInfo[0]);
     }
 
     /*
@@ -572,20 +559,20 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     @Override
     public Map<String, ServiceInfo[]> listBySubtype(final String type, final long timeout) {
-        Map<String, List<ServiceInfo>> map = new HashMap<String, List<ServiceInfo>>(5);
+        Map<String, List<ServiceInfo>> map = new HashMap<>(5);
         for (ServiceInfo info : this.list(type, timeout)) {
             String subtype = info.getSubtype();
             if (!map.containsKey(subtype)) {
-                map.put(subtype, new ArrayList<ServiceInfo>(10));
+                map.put(subtype, new ArrayList<>(10));
             }
             map.get(subtype).add(info);
         }
 
-        Map<String, ServiceInfo[]> result = new HashMap<String, ServiceInfo[]>(map.size());
+        Map<String, ServiceInfo[]> result = new HashMap<>(map.size());
         for (final Map.Entry<String, List<ServiceInfo>> entry : map.entrySet()) {
             final String subtype = entry.getKey();
             final List<ServiceInfo> infoForSubType = entry.getValue();
-            result.put(subtype, infoForSubType.toArray(new ServiceInfo[infoForSubType.size()]));
+            result.put(subtype, infoForSubType.toArray(new ServiceInfo[0]));
         }
 
         return result;
@@ -615,7 +602,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
      */
     @Override
     public NetworkTopologyListener[] networkListeners() {
-        return _networkListeners.toArray(new NetworkTopologyListener[_networkListeners.size()]);
+        return _networkListeners.toArray(new NetworkTopologyListener[0]);
     }
 
     /*
@@ -745,7 +732,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
             super();
             this._mmDNS = mmDNS;
             this._topology = topology;
-            _knownAddresses = Collections.synchronizedSet(new HashSet<InetAddress>());
+            _knownAddresses = Collections.synchronizedSet(new HashSet<>());
         }
 
         public void start(Timer timer) {
@@ -760,7 +747,7 @@ public class JmmDNSImpl implements JmmDNS, NetworkTopologyListener, ServiceInfoI
         public void run() {
             try {
                 InetAddress[] curentAddresses = _topology.getInetAddresses();
-                Set<InetAddress> current = new HashSet<InetAddress>(curentAddresses.length);
+                Set<InetAddress> current = new HashSet<>(curentAddresses.length);
                 for (InetAddress address : curentAddresses) {
                     current.add(address);
                     if (!_knownAddresses.contains(address)) {
